Fix java9 compatibility issue